# typescript-starter

./: .bazelrc  .dockerignore  .env  .env.dev  .env.example  .env.test  .eslintrc.js  .eslintrc.json  .gitignore  .gitpod  .prettierrc  .prettierrc.js  BUILD.bazel  Dockerfile  Dockerfile.local  GameObject.java  IMPLEMENTATION_DETAILS.md  LICENSE  Main.java  Player.java  PowerUpSpeed.java  PowerUpVisibility.java  PowerUpVisitor.java  README.md  Readme.md  TesteNest.postman_collection.json  WORKSPACE  Weapon.java  builspec.yaml  docker-compose.yaml  docker-compose.yml  eslint.config.mjs  index.js  nest-cli.json  nodemon.json  openapi.yaml  ormconfig.js  ormconfig.json  package-lock.json  package.json  (+5 more)
src/: BUILD.bazel  README.md  __app.controller.ts  __app.module.ts  __db.module.ts  app.controller.spec.ts  app.controller.ts  app.module.ts  app.service.ts  app.spec.ts  app.ts  constants.ts  create-cat.dto.ts  environment.ts  main.ts  repl.ts  schema.gql  server.ts  task.controller.ts  task.entity.ts  task.service.ts  timeout.interceptor.ts  zipcode.dto.ts  zipcode.pipe.ts  zipcode.service.ts
src/Cat/: cat.controller.ts  cat.module.ts  cat.service.ts
src/__tests__/: zipcode.pipe.spec.ts  zipcode.service.spec.ts  zipcode.service.test.ts
src/airports/: airports.controller.ts  airports.interface.ts  airports.module.ts  airports.service.ts
src/app/: app.controller.spec.ts  app.controller.ts  app.module.ts  app.service.ts
src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  get-user.decorator.ts  jwt.strategy.ts  local.strategy.ts
src/authentication/: authentication.controller.ts  authentication.module.ts  authentication.service.ts  jwt-authentication.guard.ts  jwt-refresh-token.strategy.ts  jwt-refresh.guard.ts  jwt.strategy.ts  local-authentication.guard.ts  local.strategy.ts  localAuthentication.guard.ts  request-with-user.interface.ts  requestWithUser.interface.ts  tokenPayload.interface.ts
src/bet/: bet.controller.ts  bet.entity.ts  bet.model.ts  bet.service.ts
src/carts/: cart.entity.ts  cart.interface.ts  carts.controller.ts  carts.module.ts  carts.service.ts
src/carts-products/: cart-product.entity.ts  carts-products.module.ts  carts-products.service.ts
src/client/: client.controller.spec.ts  client.controller.ts  client.module.ts  client.service.ts
src/common/: assertion-concern.ts  illegal-argument.exception.ts  index.ts
src/config/: configuration.ts  env.d.ts
src/constant/: ErrorResponse.ts
src/core/: core.module.ts
(+438 files in other folders)
